@startuml bank_ozar_summary
hide empty members
skinparam classAttributeIconSize 0
skinparam shadowing false
top to bottom direction

class "api (module)" as api {
  +api(): None
  -_balance(user_info): bool
  -_deposit(user_info): bool
  -_withdraw(user_info): bool
  -_add_subscription(user_info): bool
  -_remove_subscription(user_info): bool
  -_list_subscriptions(user_info): bool
  -_balance_next_day(user_info): bool
  -_purge(user_info): bool
  -_exit(user_info): bool
}

class Logics {
  +connect_user(username): AccountInfo
  +get_balance(user_info): str
  +add_money(user_info, amount): str
  +get_money(user_info, amount): str
  +add_subscription(user_info, name, date, amount): str
  +del_subscription(user_info, name): str
  +subscription_list(user_info): list
  +register_user(username): AccountInfo
  +del_account(user_info): tuple
  +balance_next_day(user_info): str
}

abstract class AccountRules {
  +INITIAL_BALANCE: int = 0
  +qualifies(person): bool
  +on_register(account, person)
  +get_balance(user_info): str
  +add_money(user_info, amount): str
  +get_money(user_info, amount): str
  +get_subscriptions(user_info): list
  +balance_next_pay_day(amount): str
}
class BlueAccountRules
class RedAccountRules
class GreenAccountRules
class YellowAccountRules

AccountRules <|-- BlueAccountRules
AccountRules <|-- RedAccountRules
AccountRules <|-- GreenAccountRules
AccountRules <|-- YellowAccountRules

class AccountInfo {
  +username: str
  +balance: int
  +account_type: AccountType
  +locked: bool
}

class StorageManager {
  +is_user_exist(username): bool
  +get_user_information(username): AccountInfo
  +add_account(account): bool
  +update_balance(username, balance)
  +update_lock(username, status)
  +delete_account(username): bool
  +add_subscription(username, name, end_date, amount): bool
  +delete_subscription(username, name): bool
  +delete_subscriptions(username): int
  +get_subscriptions(username): list
}

enum AccountType {
  YELLOW = 1
  RED = 2
  BLUE = 3
  GREEN = 4
}

note as Exceptions
  <b>BankAppError</b> (all domain errors)
  ├ EntityNotFoundError
  ├ RegistrationError
  │  ├ PersonNotFoundError
  │  ├ NoQualifyingAccountTypeError
  │  └ AccountAlreadyExistsError
  ├ InsufficientFundsError
  ├ LimitExceededError
  ├ DatabaseError
  ├ InvalidAmountError
  └ InvalidDateError
end note

api --> Logics : calls
Logics --> AccountRules : ACCOUNT_RULES[account_type]
AccountRules --> AccountInfo : mutates
StorageManager --> AccountInfo : builds
Logics --> StorageManager
AccountRules --> StorageManager
AccountInfo --> AccountType
api ..> Exceptions : catches
Logics ..> Exceptions : raises

@enduml
